<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{305fbcc3-9859-4684-8e56-00ddf5566217}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

//Block States IO
mInSwitch : ARRAY[0..39] OF DINT;
mOutSwitch : ARRAY[0..39] OF DINT;
mInOccupancies : ARRAY[0..39] OF DINT;
mOutOccupancies : ARRAY[0..39] OF DINT;
mInSpeeds : ARRAY[0..39] OF DINT;
mOutSpeeds : ARRAY[0..39] OF DINT;
mInAuthorities : ARRAY[0..39] OF DINT;
mOutAuthorities : ARRAY[0..39] OF DINT;
mInCrossings : ARRAY[0..39] OF DINT;
mOutCrossings : ARRAY[0..39] OF DINT;
mInLeftLights : ARRAY[0..39] OF DINT;
mOutLeftLights : ARRAY[0..39] OF DINT;
mInRightLights : ARRAY[0..39] OF DINT;
mOutRightLights : ARRAY[0..39] OF DINT;
mInMaintenance : ARRAY[0..39] OF DINT;
mOutMaintenance : ARRAY[0..39] OF DINT;
mInRoute : ARRAY[0..76] OF DINT;
mOutRoute : ARRAY[0..76] OF DINT;
mSpeedLimits : ARRAY[0..39] OF DINT := [70,70,70,70,70,70,70,70,70,70,
										70,70,70,70,70,70,60,60,55,55,
										55,55,55,55,55,55,55,55,55,55,
										55,55,55,55,55,55,55,55,55,70];
mInTrain : BOOL := FALSE;
mOutTrain : BOOL := FALSE;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>